web/server/data/bash-logs/bash_2026-07-15T02-34-46_spu4.log
# bash log — 2026/7/15 10:34:46
# session: (none)
# exit: 1  duration: 55ms
# command:
python -c "
import os, subprocess

# Configure yt-dlp JS runtime
cfg_dir = os.path.expanduser('~\\AppData\\Roaming\\yt-dlp')
os.makedirs(cfg_dir, exist_ok=True)
cfg_file = os.path.join(cfg_dir, 'config')
with open(cfg_file, 'a') as f:
    f.write('--js-runtimes node\n')
print('yt-dlp config updated')
" 2>&1



# stderr (104 chars):
  File "<string>", line 1
    "
    ^
SyntaxError: unterminated string literal (detected at line 1)
